# FasTest

./: README.md  package-lock.json
backend/: .gitignore  README.md  api.py  api_client_playwright_executor.py  api_client_test_writer.py  confluence_import.py  pyproject.toml  run_api.sh  supabase.py  supabase_client.py  utils.py
backend/backendApi/: confluenceImport.js
backend/prompts/: playwright_guidelines.py  system_prompt_string.py
backend/testjs/: .gitignore  package-lock.json  package.json  playwright.config.js
backend/testjs/tests/: test.spec.js
fastest-forge-app/: README.md  manifest.yml  package-lock.json  package.json
fastest-forge-app/src/frontend/: index.html
fastest-forge-app/static/hello-world/: package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  constants.js  index.css  supabase.js
frontend/src/backendApi/: confluenceImport.js  createJiraIssue.js  generateTest.js
frontend/src/components/: ButtonContainer.jsx  CreateTestModal.jsx  FormFieldsContainer.jsx  HeaderTest.jsx  JiraIssueModal.jsx  PassingBar.jsx  StepBlock.jsx  StepsContainer.jsx  TestBar.jsx  TestConfigurationPanel.jsx  TestHeader.jsx  TestResultsPanel.jsx  TestStepsPanel.jsx  TestSuite.jsx  TestSuiteDashboard.jsx  TestTable.jsx
frontend/src/hooks/: useTestGeneration.js
frontend/src/pages/: TestCreate.jsx
jiraapi/: .env.example  .mcp.json  README.md  package-lock.json  package.json  tsconfig.json
jiraapi/src/: createIssue.ts  testConnection.ts
python-jiraapi/: .env.example  README.md  hello.py  main.py  pyproject.toml
(+5 files in other folders)
