[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
      "google-genai>=1.43.0",
      "ruff>=0.14.0",
      "langchain-aws>=0.2.0",
      "langchain-core>=0.3.0",
      "python-dotenv>=1.0.0",
      "openai-agents>=0.3.3",
      "pytest-playwright>=0.7.1",
      "tiktoken>=0.12.0",
      "fastapi>=0.119.0",
      "uvicorn>=0.37.0",
      "supabase>=2.22.0",
      "httpx>=0.26.0",
      "beautifulsoup4>=4.12.3",
]
